[gd_scene load_steps=5 format=3 uid="uid://byuouoh8ahad5"]

[ext_resource type="Script" uid="uid://cjnboggqibofv" path="res://components/ui/worker_card/worker_card_redux.gd" id="2_3dc37"]
[ext_resource type="Texture2D" uid="uid://ulcids0e12dp" path="res://assets/prof_pics/worker.png" id="2_a4h5d"]
[ext_resource type="Texture2D" uid="uid://qx70gu5u3jhm" path="res://assets/ui/lilac_down_white.png" id="3_sxmd5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hx1uy"]
texture = ExtResource("3_sxmd5")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[node name="WorkerCard" type="PanelContainer"]
offset_left = 232.0
offset_right = 246.0
offset_bottom = 92.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_hx1uy")
script = ExtResource("2_3dc37")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="WorkerCard" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 0

[node name="Portrait" type="TextureRect" parent="MarginContainer/WorkerCard"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_a4h5d")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/WorkerCard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/WorkerCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="MarginContainer/WorkerCard/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Name"

[node name="TypeLabel" type="Label" parent="MarginContainer/WorkerCard/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Type"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/WorkerCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="MarginContainer/WorkerCard/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Status"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/WorkerCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProdLabel" type="Label" parent="MarginContainer/WorkerCard/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Productivity"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/WorkerCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CostLabel" type="Label" parent="MarginContainer/WorkerCard/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Cost"

[node name="ActionButton" type="Button" parent="MarginContainer/WorkerCard"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 16
text = "Action"
